--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "practical-lewin-20dbe8.netlify.com/"
+baseURL = "/"
 languageCode = "en-us"
 title = "Veronica Liu"
 theme = "hugo-lodi-theme"
