--- a/config.toml
+++ b/config.toml
@@ -19,14 +19,14 @@ theme = "hugo-lodi-theme"
 [params.hero]
     enable = true
     avatar = "linkedin_veronica.jpeg"
-    subtitle = "Hi! I'm Veronica."
-    hero_right = ["**Currently a Render Wrangler at Rooster Teeth. Currently an Arts and Technology major (Animation Track) at UT Dallas.**", "I founded [User Experience Society](https://www.facebook.com/UXSoc/), the first student UX organization in the Philippines. For two years, we've had 20+ events with 30+ speakers for over 300 members and 500+ attendees. We've expanded to [California](https://www.facebook.com/profile.php?id=245708449193012) this year.", "I do a bit of writing as well. [Here's an article with a total of 21,000+ views to InVision & Medium](http://blog.invisionapp.com/ux-internship-wisdom/) talking about 50 things I learned spending 3 years as a UX intern.", "I help cultivate the design community in Manila too. I'm the youngest core member of [UX Philippines](https://www.facebook.com/groups/uxphilippines/) and I moderated a panel with some cool people for the [UXPH 2017 Conference](https://www.uxphilippines.com).", "I'm finishing my Bachelor's degree in Management Information Systems at the Ateneo de Manila University, expecting to graduate in 2018."]
+    subtitle = "Hi! I'm Veronica Liu."
+    hero_right = ["**Currently looking for lighting/compositing or animation roles. Formerly a Render Wrangler at Rooster Teeth.**", "I’m finishing my Bachelor’s degree in Arts and Technology on the animation track at the [University of Texas at Dallas](https://atec.utdallas.edu/), and expect to graduate in **Spring 2020**.", "I worked on a motion capture short called [“Taking the Plunge”](https://youtu.be/MU-F71tI4TE) with 12 other students and was responsible for preproduction work and the rendering process.", "I reestablished the [Animation Guild at UT Dallas](https://animationutd.com/), turning it from a fangroup club with 8 members into a preprofessional animation group, and helped out in multiple roles in the organization. While I was an officer, we’ve run 20+ events, maintained over 100 members each semester and brought in 22 industry speakers for events on campus.", "I’ve had the opportunity to be a [SIGGRAPH](https://www.siggraph.org/) SV for SIGGRAPH 2017, 2018, and am involved with [ABOSG](https://www.abunchofshortguys.org/), Dallas’s local animation group."]
     resume = "LiuResume.pdf"
 
 [params.process]
     enable = true
     title = "My Specialties"
-    subtitle = "Subtitle here"
+    subtitle = ""
 
 [params.case_studies]
     enable = true
